--- a/style.css
+++ b/style.css
@@ -17,13 +17,13 @@ cursor: pointer;
      transform: translateY(3px);
 }
 .chat-container {
-    background: linear-gradient(to bottom, #3498db, #2c3e50); /* Adjust colors as needed */
+    background: linear-gradient(to bottom, #3498db, #2c3e50);
     font-family: cursive;
     border-radius: 0.5em;
     padding: 1.5em;
     margin: 2em auto;
     max-width: 37.5em;
-    height: 37.5em;
+    height: 35em;
     box-shadow: 0 0 10px black;
     overflow: hidden;
 }
@@ -55,11 +55,11 @@ cursor: pointer;
     font-weight: bold;
 }
 .chat-messages{
-    height: 23em;
+    height: 24em;
     overflow-y: scroll;
 }
 .chat-messages::-webkit-scrollbar{
-    width: 8px;
+    width: 6px;
 }
 .chat-message::-webkit-scrollbar-thumb{
     background-color: bisque;
@@ -76,24 +76,29 @@ cursor: pointer;
     color: antiquewhite;
     flex-direction: column;
 }
+
 .message-sender{
     font-weight: bold;
     margin-bottom: 0.31em;
 }
 .message-text{
-    font-size: 0.8em;
+    font-size: 0.7em;
     margin-bottom:0.21em;
     word-wrap: break-word;
+
 }
 .message-timestamp{
     font-size: 0.65em;
     text-align: right;
 }
 .black-bg{
-    background-color:black
+    background-color:#2c3e50;
+    height:50px;
+
 }
 .light-bg{
-    background-color:rgb(34, 34, 70);
+    background-color:lightsalmon;
+    height:50px;
 }
 .input-form{
     display: flex;
@@ -108,13 +113,17 @@ cursor: pointer;
     color: black;
     font-size: 1em;
     flex-grow:1;
+    width: 60px;
      
 }
 .send-button{
     background-color:darkgreen;
+    border-radius:2px;
     color:bisque;
     font-weight: bold;
     margin-left: 0.625em;
+    width: 130px;
+    height: 30px;
 }
 .send-button:active{
     transform: translateY(3px);
@@ -133,4 +142,13 @@ h1{
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     text-align: center;
     margin-top: 1em;
+}
+.sender-message {
+    align-self: flex-start;
+    background-color:#2c3e50;
+}
+
+.receiver-message {
+    align-self: flex-end;
+    background-color:lightsalmon
 }
